# Pake

./: app.csv
src-tauri/: Cargo.toml
